--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "npx sass --watch ./css/ejercicio-sass.scss ejercicio-sass.css"
+    "sass": "sass --watch ./css/ejercicio-sass.scss ./css/ejercicio-sass.css"
   },
   "keywords": [],
   "author": "",
